# tnp_projectus

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  uv.md
app/: alembic.ini  config.py  main.py
app/alembic/: env.py
app/models/: __init__.py  project.py  project_member.py  task.py
app/scripts/: seed_data.py
src/: config.py  database.py  fill_database.py  main.py  models.py  orm.py  repository.py  schemas.py  security.py  utils.py
src/migrations/: env.py
src/migrations/versions/: 21a24d6ab561_version_3.py  3dd54e08d506_add_position_column_to_boards_table.py  561aa65385ab_initial_migration.py  5a5dbbb80e48_version_5.py  5b12e858451a_make_usernames_not_unique.py  66262ef6d32b_initial_migration.py  79358c60cbeb_version_7.py  a951b2eb8e55_version_6.py
